# YzPzCode

./: .gitignore  ARREADME.MD  DEREADME.MD  ESREADME.MD  FRREADME.MD  LICENSE  PTREADME.MD  README.md  SECURITY.md  TRREADME.MD
.github/workflows/: release.yml
app/: package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
app/src/: App.tsx  styles.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  types.rs
app/src-tauri/src/agent/: executor.rs
app/src-tauri/src/agent_cli/: auth_detector.rs  cli_launcher.rs  detector.rs  installer.rs  prerequisites.rs  provider.rs
app/src-tauri/src/agent_cli/providers/: agentmail.rs  elevenlabs.rs  gh.rs  gws.rs  hermes.rs  mod.rs  posthog.rs  ramp.rs  stripe.rs  supabase.rs  valyu.rs  vercel.rs
app/src-tauri/src/commands/: agent_commands.rs  cli_commands.rs  external_terminals.rs  feedback_commands.rs  filesystem_commands.rs  ide_commands.rs  mod.rs  terminal_commands.rs  window_commands.rs
app/src-tauri/src/filesystem/: git_diff_stats.rs  git_status.rs  mod.rs  operations.rs  reader.rs  watcher.rs
app/src-tauri/src/ide/: detector.rs  launcher.rs  mod.rs
app/src-tauri/src/terminal/: mod.rs  session.rs
app/src-tauri/src/utils/: env.rs  process.rs
app/src/components/: ErrorBoundary.tsx
app/src/hooks/: useAgentAllocation.ts  useFileEditor.ts  useFileTree.ts  useIde.ts  useTerminal.ts  (+3 more)
docs/: AUTO_UPDATE.md  RequestForm.md  ToolCLIs.md  enhancement.md  problem.md  termenalEnhancement.md
(+56 files in other folders)
