[package]
name = "yzpzcode"
version = "1.5.5"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "yzpzcode_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
thiserror = "1"
reqwest = { version = "0.12", features = ["json"] }
which = "6"
ignore = "0.4"
notify = { version = "6", features = ["macos_kqueue"] }
base64 = "0.22"
regex = "1"

